// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radios > should render correctly with a padding 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
      id="field-1"
    >
      <legend
        class="govuk-fieldset__legend govuk-!-padding-top-2"
      >
        <span
          class="govuk-heading-s govuk-!-margin-bottom-0"
        >
          Type of disruption
        </span>
      </legend>
      <div
        class=""
      >
        <div
          class="govuk-radios"
          data-module="govuk-radios"
        >
          <div
            class="govuk-radios__item govuk-!-margin-bottom-1"
          >
            <input
              class="govuk-radios__input"
              data-aria-controls="field-1-planned-conditional"
              id="field-1-planned"
              name="field1"
              type="radio"
              value="planned"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="field-1-planned"
            >
              Planned
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-aria-controls="field-1-unplanned-conditional"
              id="field-1-unplanned"
              name="field1"
              type="radio"
              value="unplanned"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="field-1-unplanned"
            >
              Unplanned
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`Radios > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group govuk-form-group--error"
  >
    <fieldset
      class="govuk-fieldset"
      id="field-1"
    >
      <legend
        class="govuk-fieldset__legend"
      >
        <span
          class="govuk-heading-s govuk-!-margin-bottom-0"
        >
          Type of disruption
        </span>
      </legend>
      <div
        class=""
      >
        <span
          class="govuk-error-message"
          id="field1-error"
        >
          <span
            class="govuk-visually-hidden"
          >
            Error: 
          </span>
          There was an error
        </span>
        <div
          aria-describedby="field1-error"
          class="govuk-radios govuk-radios--error"
          data-module="govuk-radios"
        >
          <div
            class="govuk-radios__item govuk-!-margin-bottom-1"
          >
            <input
              class="govuk-radios__input"
              data-aria-controls="field-1-planned-conditional"
              id="field-1-planned"
              name="field1"
              type="radio"
              value="planned"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="field-1-planned"
            >
              Planned
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-aria-controls="field-1-unplanned-conditional"
              id="field-1-unplanned"
              name="field1"
              type="radio"
              value="unplanned"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="field-1-unplanned"
            >
              Unplanned
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`Radios > should render correctly with no errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <fieldset
      class="govuk-fieldset"
      id="field-1"
    >
      <legend
        class="govuk-fieldset__legend"
      >
        <span
          class="govuk-heading-s govuk-!-margin-bottom-0"
        >
          Type of disruption
        </span>
      </legend>
      <div
        class=""
      >
        <div
          class="govuk-radios"
          data-module="govuk-radios"
        >
          <div
            class="govuk-radios__item govuk-!-margin-bottom-1"
          >
            <input
              class="govuk-radios__input"
              data-aria-controls="field-1-planned-conditional"
              id="field-1-planned"
              name="field1"
              type="radio"
              value="planned"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="field-1-planned"
            >
              Planned
            </label>
          </div>
          <div
            class="govuk-radios__item"
          >
            <input
              class="govuk-radios__input"
              data-aria-controls="field-1-unplanned-conditional"
              id="field-1-unplanned"
              name="field1"
              type="radio"
              value="unplanned"
            />
            <label
              class="govuk-label govuk-radios__label"
              for="field-1-unplanned"
            >
              Unplanned
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
